fix: Update Readme to sync with new project structure